// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCTActions Should create correct ct actions from request and mollies order 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2018-08-02T09:29:56+00:00",
    "id": "3fea7470-5434-4056-a829-a187339e94d8",
    "request": "{\\"cartId\\":\\"fd5317fa-c2f8-44c0-85ab-a1c1169d2404\\",\\"transactionId\\":\\"949ab89f-7a71-4c7a-bb43-605354322a96\\",\\"createPayment\\":{\\"locale\\":\\"fr_FR\\"}}",
    "response": "{\\"mollieOrderId\\":\\"ord_dsczl7\\",\\"transactionId\\":\\"949ab89f-7a71-4c7a-bb43-605354322a96\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`createCTActions Should create correct ct actions from request and mollies order 2`] = `
Object {
  "action": "setMethodInfoName",
  "interfaceText": undefined,
}
`;

exports[`createCTActions Should create correct ct actions from request and mollies order 3`] = `
Object {
  "action": "setKey",
  "key": "ord_dsczl7",
}
`;

exports[`createCTActions Should create correct ct actions from request and mollies order 4`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "949ab89f-7a71-4c7a-bb43-605354322a96",
}
`;

exports[`createCTActions Should create correct ct actions from request and mollies order 5`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "tr_2hwPMAs5qU",
  "transactionId": "949ab89f-7a71-4c7a-bb43-605354322a96",
}
`;

exports[`createCTActions Should create correct ct actions from request and mollies order 6`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2018-08-02T09:29:56+00:00",
  "transactionId": "949ab89f-7a71-4c7a-bb43-605354322a96",
}
`;
